After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786401 - mono wav file cannot link with avenc_mp2 issue
mono wav file cannot link with avenc_mp2 issue
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
1.12.2
Other Linux
: Normal minor
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-17 08:14 UTC by Lyon
Modified: 2017-08-17 12:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test wav clip (3.08 MB, audio/wav)
2017-08-17 08:49 UTC, Lyon
  Details
gstavcodecmap: Do not require a channel-mask (1.65 KB, patch)
2017-08-17 12:31 UTC, Mathieu Duponchelle
committed Details | Review

Description Lyon 2017-08-17 08:14:20 UTC
When I am trying to using avenc_mp2 to encode a wav file into mp3 file,
I used below command line:
gst-launch-1.0 filesrc location=test_32kHz_mono.wav ! wavparse ! avenc_mp2 ! filesink location=enc.mp3

It will report "streaming stopped, reason not-negotiated (-4)"

And when I add audioconvert after wavparse:
gst-launch-1.0 filesrc location=test_32kHz_mono.wav ! wavparse ! audioconvert ! avenc_mp2 ! filesink location=enc.mp3

It works fine.


I checked avenc_mp2, sink caps support
       audio/x-raw
           channel-mask: 0x0000000000000000
               channels: 1
                   rate: { (int)48000, (int)44100, (int)32000, (int)24000, (int)22050, (int)16000 }
                 layout: interleaved
                 format: S16LE


however wavparse src pad with no channel-mask property.

I'm not sure it is wavparse's issue or avenc_mp2's issue.
should we care channel-mask for wavpars's output
Comment 1 Lyon 2017-08-17 08:49:02 UTC
Created attachment 357773 [details]
test wav clip
Comment 2 Sebastian Dröge (slomo) 2017-08-17 09:06:42 UTC
For mono/stereo it should not require any channel-mask.
Comment 3 Mathieu Duponchelle 2017-08-17 12:31:18 UTC
Created attachment 357809 [details] [review]
gstavcodecmap: Do not require a channel-mask

.. for mono or stereo input.
Comment 4 Mathieu Duponchelle 2017-08-17 12:49:47 UTC
Attachment 357809 [details] pushed as 2bb0dc1 - gstavcodecmap: Do not require a channel-mask