gstavcodecmap: Do not require a channel-mask

.. for mono or stereo input.

https://bugzilla.gnome.org/show_bug.cgi?id=786401